src/test/deca/codegen/valid/mult.deca
// Description:
//   Test de la bonne utilisation des registres
//
// Resultats:
//    ima_output: 10
//

{
    int a = 2;
    a = a * 5;
    println(a);
}
